tests/fail/fail_molda_field_type_mismatch.kr
molda Pessoa {
    textu nomi;
    nter idadi;
}

fn inisiu() {
    Pessoa pessoa = Pessoa::{nomi: 10, idadi: 60};
    mostra(pessoa.nomi);
}
